--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -694,6 +694,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 
         .voteIconRank {
             text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+            font-size: 40px;
             // box-shadow: inset inset 0px 0px 5px #c1c1c1;
             // @include BoxShadow(6);
         }
