--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -312,9 +312,9 @@
                                 <!-- {{ separateName.split('|')[1]}} -->
                             </div>
 
-                            <div class="groupNameIetmRationale" (mouseleave)="selectNameItemIndex = ''"
+                            <div class="groupNameIetmRationale" (mouseleave)="selectNameItemIndex = ''" (click)="selectNameItemIndex = ''"
                                 *ngIf="i === selectNameItemIndex" [style.left]="myleft" [style.top]="mytop"
-                                [innerHTML]="'Future Rationale'">
+                                [innerHTML]="'Future Rationale Future Rationale Future RationaleFuture RationaleFuture RationaleFuture Rationale'">
                             </div>
 
 
@@ -356,7 +356,7 @@
 
            
             <!-- FAVORITE RANK ALL ICON -->
-                <button [ngClass]="(isGoVoteOn)?'heart-favorite':'heart-favorite-Off'" mat-icon-button (click)="setAllNamesIcon('favorite', 'red')">
+                <button [ngClass]="(isFavoriteOn)?'heart-favorite':'heart-favorite-Off'" mat-icon-button (click)="setAllNamesIcon('favorite', 'red')">
                     <mat-icon  class="heart-favorite-icon">favorite</mat-icon>
                 </button>
                 <button class="G4 GG" mat-icon-button (click)="setAllNamesIcon('thumb_down_off_alt', 'purple')">
