slide info for QR code in place and under construction

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -324,6 +324,12 @@
                 </button> -->
         </div>
 
+         <!-- INFO SLIDE QR CODE -->
+         <div *ngIf="(slideType === 'info')">
+           
+            SLIDE info
+        </div>
+
 
         <!--💔 END OF TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE -->
 
