slide info for QR code in place and under construction

--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -42,7 +42,7 @@
     -ms-transform: translate(-50%, -53%);
     transform: translate(-50%, -53%);
     border-radius: 3px;
-    background-image: url("https://image.shutterstock.com/shutterstock/photos/1897867054/display_1500/stock-vector-currency-watermark-background-intense-illustration-detailed-design-1897867054.jpg");
+    // background-image: url("https://image.shutterstock.com/shutterstock/photos/1897867054/display_1500/stock-vector-currency-watermark-background-intense-illustration-detailed-design-1897867054.jpg");
 
     // @include BoxShadow(6);
 
