--- a/src/app/bmx/bmx.component.html
+++ b/src/app/bmx/bmx.component.html
@@ -1,4 +1,4 @@
-<div class="mainContainerPresent" [@cardAnimator]="animationState" (@cardAnimator.done)="resetAnimationState()">
+<div class="mainContainerPresent" *ngIf="!slideToLogin" [@fadeInOut]>
 
     <div *ngIf="true" class="landingScreenTextContent">
 
@@ -27,7 +27,7 @@
         </div>
 
         <div class="slideToLoginBoundary">
-            <button mat-icon-button class="GO" cdkDragBoundary=".slideToLoginBoundary" cdkDragLockAxis="x" cdkDrag (swipeRight)="startAnimation('slideOutRight')">
+            <button mat-icon-button class="GO" cdkDragBoundary=".slideToLoginBoundary" cdkDragLockAxis="x" cdkDrag (swipe)="onSwipe($event)">
                 BI
             </button>
             <!-- <mat-icon style="color: darkblue;">crop_16_9</mat-icon> -->
@@ -52,4 +52,27 @@
     
     </div>
 
+</div>
+
+<div class="loginContainerPresent" *ngIf="slideToLogin" (swipe)="onSwipe($event)" [@fadeInOut]>
+    <mat-card>
+        <mat-card-title><h1>Enter Login</h1></mat-card-title>
+        <form class="example-form">
+            <mat-form-field class="example-full-width">
+                <mat-label>First name</mat-label>
+                <input matInput>
+              </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Email</mat-label>
+              <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@brandinstitute.com">
+              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                Please enter a valid email address
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+            
+          </form>
+    </mat-card>
 </div>
